--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.1.1",
     "@nestlab/google-recaptcha": "^3.8.0",
     "@prisma/client": "^6.1.0",
     "@react-email/components": "^0.0.31",
